--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,4 +16,24 @@ body {
 .container {
   max-width: 1600px;
   margin: 0 auto;
+  padding: 20px;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #6119c5;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #6119c5;
 }
