--- a/src/app/(pages)/account/[type]/style.scss
+++ b/src/app/(pages)/account/[type]/style.scss
@@ -30,13 +30,17 @@
         }
 
         input {
-            padding: 0.4rem 1rem;
+            padding: 0.4rem 0.5rem;
             border: 1px solid rgb(184, 184, 184);
             // width: 40%;
             border-radius: 0.5rem;
             margin-bottom: 0.5rem;
             width: 100%;
+            color: rgb(19, 19, 19);
 
+            &::placeholder {
+                color: rgb(184, 184, 184);
+            }
         }
 
         h1 {
