--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: white;
+  transition: 200ms linear;
 }
 body {
   background-color: rgb(19, 19, 19);
