--- a/src/components/cards-bank/style.scss
+++ b/src/components/cards-bank/style.scss
@@ -61,8 +61,31 @@
                 color: gray;
             }
 
+            &:hover {
+                svg {
+                    display: block
+                }
+            }
+
             p {
                 text-transform: capitalize;
+            }
+
+            button {
+                display: flex;
+                align-items: center;
+                justify-content: left;
+                gap: 0.2rem;
+
+                svg {
+                    display: none;
+                }
+
+                svg path {
+                    color: gray;
+                }
+
+
             }
         }
     }
@@ -123,6 +146,7 @@
     .card-no {
         font-size: 35px;
         margin-top: 60px;
+        text-shadow: 1px 1px 2px black;
     }
 
     .card-holder {
