--- a/src/components/cards-bank/style.scss
+++ b/src/components/cards-bank/style.scss
@@ -61,6 +61,8 @@
                 color: gray;
             }
 
+            width: fit-content;
+
             &:hover {
                 svg {
                     display: block
@@ -69,6 +71,7 @@
 
             p {
                 text-transform: capitalize;
+
             }
 
             button {
@@ -86,8 +89,24 @@
                 }
 
 
+
             }
         }
+
+        .cvv {
+            button {
+                p {
+                    filter: blur(5px);
+                }
+
+                &:hover {
+                    p {
+                        filter: blur(0);
+                    }
+                }
+            }
+        }
+
     }
 
 
