--- a/src/components/cards-bank/style.scss
+++ b/src/components/cards-bank/style.scss
@@ -205,6 +205,12 @@
         color: #000;
         font-size: 22px;
         padding: 10px 20px;
+        filter: blur(4px);
+        width: fit-content;
+
+        &:hover {
+            filter: blur(0);
+        }
     }
 
     .card-text {
