--- a/src/components/chart/style.scss
+++ b/src/components/chart/style.scss
@@ -1,8 +1,44 @@
 .Charts {
     margin-top: 1rem;
-    background-color: white;
+    background-color: transparent;
+    border: 1px solid gray;
     border-radius: 0.5rem;
     padding: 1rem;
     color: black !important;
-    overflow: hidden;
+    color: white;
+
+    .MuiChartsAxis-line,
+    .MuiChartsLegend-series,
+    .MuiChartsLegend-root,
+    .base-Popper-root,
+    .MuiChartsAxis-tick {
+        display: none;
+    }
+
+    .MuiChartsAxis-tickLabel {
+        tspan {
+            font-weight: 600;
+            color: white;
+
+        }
+
+        fill: rgb(255 255 255);
+    }
+
+    #-clip-path,
+    clipPath {
+        display: none !important;
+    }
+
+    .MuiBarElement-series-auto-generated-id-0 {
+        width: 1rem !important;
+        border-top-left-radius: 0.5rem;
+        border-top-right-radius: 0.5rem;
+        fill: #6119C5;
+    }
+}
+
+.base-Popper-root {
+    display: none;
+    background-color: transparent;
 }
