--- a/src/components/cards/style.scss
+++ b/src/components/cards/style.scss
@@ -7,6 +7,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding: 1rem;
 
         .headText {
             font-size: 1.5rem;
