--- a/src/app/(pages)/account/[type]/style.scss
+++ b/src/app/(pages)/account/[type]/style.scss
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     min-height: 60vh;
-    margin-top: 10rem;
+    margin-top: 5%;
     flex-direction: column;
 
     .formContainer {
