--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,3 +38,18 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #6119c5;
 }
+.Toastify__toast-container {
+  .Toastify__toast {
+    background-color: rgb(19, 19, 19);
+    border: 1px solid gray;
+    .Toastify__toast-body {
+    }
+    .Toastify__progress-bar {
+      background-image: linear-gradient(
+        90deg,
+        rgba(97, 25, 197, 1) 8%,
+        rgba(223, 69, 43, 1) 100%
+      );
+    }
+  }
+}
