--- a/src/components/cards-bank/style.scss
+++ b/src/components/cards-bank/style.scss
@@ -9,6 +9,7 @@
             align-items: center;
             justify-content: space-between;
             margin-bottom: 1rem;
+            padding: 1rem 0;
 
             p {
                 font-weight: 500;
