--- a/src/components/cards-bank/style.scss
+++ b/src/components/cards-bank/style.scss
@@ -29,7 +29,7 @@
             .spent {
                 height: 0.5rem;
                 background-color: #6119C5;
-                width: 80%;
+                // width: 80%;
             }
 
             .remaining {
