--- a/src/components/cards-bank/style.scss
+++ b/src/components/cards-bank/style.scss
@@ -219,9 +219,9 @@
         font-size: 14px;
     }
 
-    .signature {
-        margin-top: 30px;
-    }
+    // .signature {
+    //     margin-top: 30px;
+    // }
 
     .back {
         transform: rotateY(180deg);
