--- a/src/components/cards-bank/style.scss
+++ b/src/components/cards-bank/style.scss
@@ -239,8 +239,12 @@
             font-size: 1.8rem;
             font-weight: 600;
 
-            span {
+            p {
+                font-size: 1.8rem;
+
+                display: inline;
                 color: #6119C5;
+                font-weight: 600;
             }
         }
     }
