--- a/src/components/home-hero/styles.scss
+++ b/src/components/home-hero/styles.scss
@@ -35,7 +35,7 @@
             width: fit-content;
             border-radius: 10rem;
 
-            button {
+            a {
                 padding: 0.7rem 2rem;
                 border-radius: 10rem;
                 text-transform: uppercase;
