--- a/src/components/cards-bank/style.scss
+++ b/src/components/cards-bank/style.scss
@@ -74,7 +74,7 @@
 
             p {
                 text-transform: capitalize;
-
+                margin-right: 0.5rem;
             }
 
             button {
