--- a/src/components/sender/style.scss
+++ b/src/components/sender/style.scss
@@ -14,6 +14,11 @@
         flex-direction: column;
         gap: 0.2rem;
 
+        .error {
+            color: red;
+            height: 1.3rem;
+        }
+
         label {
             text-align: left;
             width: 100%;
@@ -57,6 +62,21 @@
             button {
                 font-weight: 500;
                 outline: 0px solid #DF452B;
+            }
+        }
+
+        .amountInput {
+            input {
+                padding-left: 2rem;
+            }
+
+            position: relative;
+
+            .icon {
+                position: absolute;
+                top: 0.5rem;
+                left: 0.7rem;
+                font-weight: 500;
             }
         }
 
