--- a/src/components/sender/style.scss
+++ b/src/components/sender/style.scss
@@ -116,6 +116,17 @@
                 }
             }
         }
+
+        button {
+            &:disabled {
+                opacity: 0.4;
+
+                &:hover {
+                    background-color: #6119C5;
+                    cursor: not-allowed;
+                }
+            }
+        }
     }
 
     /* Chrome, Safari, Edge, Opera */
