--- a/src/components/transfer/style.scss
+++ b/src/components/transfer/style.scss
@@ -125,6 +125,7 @@
         border-radius: 0.5rem;
         gap: 0.5rem;
         cursor: pointer;
+        min-width: 120px;
 
         &:hover {
             background-color: #DF452B;
