--- a/src/components/navbar/style.scss
+++ b/src/components/navbar/style.scss
@@ -57,6 +57,29 @@
 
                 }
             }
+
+            .nav {
+                position: relative;
+
+                svg {}
+
+                sup {
+                    position: absolute;
+                    top: -5px;
+                    right: -3px;
+                    height: 1rem;
+                    width: 1rem;
+                    background-color: #DF452B;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    border-radius: 50%;
+
+                    p {
+                        font-weight: 500;
+                    }
+                }
+            }
         }
     }
 
