--- a/src/app/(pages)/success/style.scss
+++ b/src/app/(pages)/success/style.scss
@@ -33,3 +33,12 @@
         font-weight: 600;
     }
 }
+
+@media (max-width:1000px) {
+    .Success {
+
+        .line {
+            width: 100%;
+        }
+    }
+}
