--- a/src/app/(pages)/dashboard/style.scss
+++ b/src/app/(pages)/dashboard/style.scss
@@ -4,10 +4,20 @@
     gap: 1rem;
 
     .col {}
+
+    .infos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
+    }
 }
 
 @media (max-width:1140px) {
     .Dashboard {
         grid-template-columns: 1fr;
+
+        .infos {
+            display: flex;
+        }
     }
 }
