--- a/src/components/cards-bank/style.scss
+++ b/src/components/cards-bank/style.scss
@@ -120,6 +120,7 @@
         cursor: pointer;
         perspective: 1000px;
         margin-bottom: 2rem;
+        display: none;
     }
 
     .card-inner {
