responsive style fixes

--- a/src/app/(pages)/dashboard/style.scss
+++ b/src/app/(pages)/dashboard/style.scss
@@ -17,7 +17,7 @@
         grid-template-columns: 1fr;
 
         .infos {
-            display: flex;
+            grid-template-columns: 1fr;
         }
     }
 }
