--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,17 +13,17 @@
 }
 body {
   background-color: rgb(19, 19, 19);
+  height: 100svh;
 }
 .container {
   max-width: 1600px;
   margin: 0 auto;
   padding: 20px;
-  width: 100%;
 }
 
 @media (max-width: 600px) {
   .container {
-    padding: 5px;
+    padding: 10px;
   }
 }
 
