--- a/src/components/operations/style.scss
+++ b/src/components/operations/style.scss
@@ -6,6 +6,7 @@
     border-radius: 0.5rem;
     padding: 1rem;
     color: white;
+    height: fit-content;
 
     .heading {
         display: flex;
