--- a/src/components/cards/style.scss
+++ b/src/components/cards/style.scss
@@ -21,10 +21,18 @@
                 padding: 1rem 1.5rem;
                 text-transform: capitalize;
                 border: 1px solid #6119C5;
+
+                p {
+                    opacity: 0.6;
+                }
             }
 
             .active {
-                font-weight: 500;
+                p {
+                    opacity: 1;
+                }
+
+                // font-weight: 500;
                 background-color: #6119C5;
 
             }
