username change added

--- a/src/app/(pages)/settings/style.scss
+++ b/src/app/(pages)/settings/style.scss
@@ -35,5 +35,9 @@
         .MuiFormControl-root {
             margin: 0 !important;
         }
+
+        .updateBtn {
+            background-color: #6119C5;
+        }
     }
 }
