active link styling added

--- a/src/components/navbar/style.scss
+++ b/src/components/navbar/style.scss
@@ -58,6 +58,18 @@
                 }
             }
 
+            .active {
+
+
+                svg,
+                svg path {
+
+                    color: #DF452B;
+
+                }
+
+            }
+
             .nav {
                 position: relative;
 
