--- a/src/components/settings-account/style.scss
+++ b/src/components/settings-account/style.scss
@@ -6,6 +6,14 @@
             align-items: center;
             gap: 0.5rem;
             margin: 2rem 0;
+
+            h2 {
+                font-weight: 500;
+            }
+
+            p {
+                color: gray;
+            }
         }
     }
 }
