--- a/src/app/(pages)/settings/style.scss
+++ b/src/app/(pages)/settings/style.scss
@@ -41,3 +41,13 @@
         }
     }
 }
+
+
+@media (max-width:1000px) {
+    .Settings {
+
+        h1 {
+            width: 100% !important;
+        }
+    }
+}
