--- a/src/app/(pages)/settings/style.scss
+++ b/src/app/(pages)/settings/style.scss
@@ -23,7 +23,7 @@
             color: white !important;
 
             &::placeholder {
-                color: white !important;
+                color: white;
 
             }
         }
