--- a/src/components/settings-account/style.scss
+++ b/src/components/settings-account/style.scss
@@ -16,4 +16,17 @@
             }
         }
     }
+
+}
+
+#parent-modal-title {
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 1rem;
+    font-size: 2rem;
+}
+
+#parent-modal-description {
+    text-align: center;
+
 }
